# payslip_extraction

./: .gitignore  README.md  docker-compose.yml
app/: .env.template  Dockerfile  main.py  processed_emails.json  pyproject.toml
